feat(security): DefaultMetadataFilterBuilder 强制输出 kb_id + security_level filter (PR5 c1)
Builder 对非空 kbId 永远输出两条 filter:
- kb_id IN [kbId] (singleton list, OpenSearch 端渲染为 terms(metadata.kb_id, [kbId]))
- security_level LTE_OR_MISSING level (missing/null 时 fallback 到 Integer.MAX_VALUE
  no-op range)

让 "OpenSearch DSL 始终同时含 metadata.kb_id 与 metadata.security_level filter"
成为可静态断言的 query shape invariant。Integer.MAX_VALUE 不是授权决策——授权
由 AccessScope + AuthzPostProcessor 兜底。

DefaultMetadataFilterBuilderTest 覆盖 6 个用例：
- normalUser: 输出 kb_id + 对应 level
- missingEntry: kbSecurityLevels 缺 entry → MAX_VALUE
- nullSecurityLevelMap: null map → MAX_VALUE
- levelZero: level=0 不退化为 MAX_VALUE (防御 (Integer == null) 检查回归)
- nullKbId: 返空 (由 OpenSearchRetrieverService.enforceFilterContract 接住)
- emptySecurityLevelMap: 空 map → MAX_VALUE

既有 retrieve 域 25 测试全绿 (SearchContextBuilder / VectorGlobalSearchChannel
KbMetadataReader / OpenSearchRetrieverService / RetrievalScopeBuilderImpl /
MultiChannelRetrievalEnginePostProcessorChain 不受影响)。

Roadmap: docs/dev/design/2026-04-26-permission-roadmap.md §3 阶段 B
Spec: docs/superpowers/specs/2026-04-28-permission-pr5-metadata-filter-hardening-design.md